versions/1.2.4/nohup.out
  File "bot.py", line 16
    async def help(ctx):
        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "bot.py", line 1, in <module>
    from discord.ext import commands
ModuleNotFoundError: No module named 'discord'
Traceback (most recent call last):
  File "bot.py", line 1, in <module>
    from discord.ext import commands
ModuleNotFoundError: No module named 'discord'
Traceback (most recent call last):
  File "bot.py", line 1, in <module>
    from discord.ext import commands
ModuleNotFoundError: No module named 'discord'
Traceback (most recent call last):
  File "bot.py", line 1, in <module>
    from discord.ext import commands
ModuleNotFoundError: No module named 'discord'
